objects/Nacha_Config__mdt.object
<CustomObject>
    <description>Configurations needed for API call for Nacha File transfer</description>
    <fields>
        <fullName>API_Endpoint__c</fullName>
        <description>API endpoint for Service call in Nacha File transfer</description>
        <label>API Endpoint</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLIENT_ID__c</fullName>
        <description>client id required in Oauth Token call</description>
        <label>CLIENT ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLIENT_SECRET__c</fullName>
        <description>client secret key needed for Oauth Token call</description>
        <label>CLIENT SECRET</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Upload_Failed_Mail_Id__c</fullName>
        <description>emails for receiving the failure message of Batch processed</description>
        <label>File Upload Failed Mail Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRANT_TYPE__c</fullName>
        <description>Grant Type for Oauth token call in Nacha File transfer</description>
        <label>GRANT TYPE</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>METHOD__c</fullName>
        <description>Http method used for API call</description>
        <label>METHOD</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Retry_Count__c</fullName>
        <description>Retry Count for Nacha File transfer batch processing</description>
        <label>Max Retry Count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Oauth_Endpoint__c</fullName>
        <description>endpoint URL for Oauth token call</description>
        <label>Oauth Endpoint</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Nacha Config</label>
    <pluralLabel>Nacha Config</pluralLabel>
</CustomObject>